--- a/app/views/deep_wells/edit.html.erb
+++ b/app/views/deep_wells/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form', deep_well: @deep_well %>
 
-<%= link_to 'Show', @deep_well %> |
-<%= link_to 'Back', deep_wells_path %>
+<%= link_to 'Back', client_deep_wells_path %>
