--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: client, local: true) do |form| %>
+<%= form_with(model: [@island, client], local: true) do |form| %>
   <% if client.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(client.errors.count, "error") %> prohibited this client from being saved:</h2>
@@ -14,11 +14,6 @@
   <div class="field">
     <%= form.label :name %>
     <%= form.text_field :name %>
-  </div>
-
-  <div class="field">
-    <%= form.label :island_id %>
-    <%= form.text_field :island_id %>
   </div>
 
   <div class="actions">
