--- a/app/views/deep_wells/show.html.erb
+++ b/app/views/deep_wells/show.html.erb
@@ -10,5 +10,5 @@
   <%= @deep_well.client_id %>
 </p>
 
-<%= link_to 'Edit', edit_deep_well_path(@deep_well) %> |
-<%= link_to 'Back', deep_wells_path %>
+<%= link_to 'Edit', edit_client_deep_well_path([@client, @deep_well]) %> |
+<%= link_to 'Back', [@client, :deep_wells] %>
