--- a/app/views/deep_wells/index.html.erb
+++ b/app/views/deep_wells/index.html.erb
@@ -4,17 +4,15 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th>Client</th>
-      <th colspan="3"></th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @deep_wells.each do |deep_well| %>
       <tr>
-        <td><%= deep_well.name %></td>
-        <td><%= deep_well.client_id %></td>
-        <td><%= link_to 'Show', [@client, deep_well] %></td>
+        <td><%= link_to deep_well.name, [@client, deep_well] %></td>
+        <td><%= link_to 'Edit', edit_client_deep_well_path(@client, deep_well) %></td>
         <td><%= link_to 'Destroy', [@client, deep_well], method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
