--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -25,7 +25,7 @@
         </li>
         <% end %>
         <li class="nav-item">
-          <%= link_to "Settings", root_path, class:"nav-link" %>
+          <%= link_to "Settings", edit_user_registration_path, class:"nav-link" %>
         </li>
 
         <li class="nav-item">
