--- a/app/views/deep_wells/show.html.erb
+++ b/app/views/deep_wells/show.html.erb
@@ -4,6 +4,42 @@
   <strong>Name:</strong>
   <%= @deep_well.name %>
 </p>
+<p>
+  <strong>Name:</strong>
+  <%= @deep_well.dateGranted %>
+</p>
+<p>
+  <strong>Name:</strong>
+  <%= @deep_well.clientName %>
+</p>
+<p>
+  <strong>Name:</strong>
+  <%= @deep_well.wellLocation %>
+</p>
+<p>
+  <strong>Name:</strong>
+  <%= @deep_well.wellCoodinates %>
+</p>
+<p>
+  <strong>Name:</strong>
+  <%= @deep_well.waterPermitNo %>
+</p>
+<p>
+  <strong>Name:</strong>
+  <%= @deep_well.contractor %>
+</p>
+<p>
+  <strong>Name:</strong>
+  <%= @deep_well.depthTotal %>
+</p>
+<p>
+  <strong>Name:</strong>
+  <%= @deep_well.dateofUTVI %>
+</p>
+<p>
+  <strong>Name:</strong>
+  <%= @deep_well.reason %>
+</p>
 
 <%= link_to 'Edit', edit_client_deep_well_path([@client, @deep_well]) %> |
 <%= link_to 'Back', [@client, :deep_wells] %>
