--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -19,7 +19,7 @@
           </a>
           <ul class="dropdown-menu">
             <li><%= link_to "System Audit Logs", root_path, class:"dropdown-item" %></li>
-            <li><%= link_to "Manage Users", root_path, class:"dropdown-item" %></li>
+            <li><%= link_to "Manage Users", usermanages_path, class:"dropdown-item" %></li>
             <li><%= link_to "Database Backups", root_path, class:"dropdown-item" %></li>
           </ul>
         </li>
