--- a/app/views/islands/index.html.erb
+++ b/app/views/islands/index.html.erb
@@ -10,7 +10,7 @@
     <tr>
       <th style="width: 60%">Island Name</th>
       <th style="width: auto;">Number of Clients</th>
-      <th colspan="1">Edit</th>
+      <th style="width: auto;">Edit</th>
       <th style="width: auto;">Delete</th>
 
     </tr>
