--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -11,6 +11,10 @@
     </div>
   <% end %>
 
+    <%= form.label :name %>
+    <%= form.text_field :name, class:"form-control" %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
