--- a/app/views/deep_wells/index.html.erb
+++ b/app/views/deep_wells/index.html.erb
@@ -1,13 +1,19 @@
-<h1>Deep Wells</h1>
-
-<table>
+<div class="container">
+  <h1>Deep Wells</h1>
+    <form class="d-flex" role="search" style="width: 25%">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-light text-right float-end" type="submit">Search</button>
+        </form> <br>
+  
+  <table class="table table-hover table-bordered ">
   <thead>
     <tr>
-      <th>Name</th>
-      <th colspan="2"></th>
+      <th style="width: 60%">Deep Well Name</th>
+      <th style="width: auto;">Edit</th>
+      <th style="width: auto;">Delete</th>
+
     </tr>
   </thead>
-
   <tbody>
     <% @deep_wells.each do |deep_well| %>
       <tr>
@@ -18,8 +24,10 @@
     <% end %>
   </tbody>
 </table>
-
 <br>
 
-<%= link_to 'New Deep Well', new_client_deep_well_path %>
-<%#= link_to 'Back', island_clients_path %>
+<button type="button" class="btn btn-light text-right float-end" >
+  <%= link_to 'New Deep Well', new_client_deep_well_path %>
+  <%= link_to 'Back', islands_path %>
+</button>
+</div>
