--- a/app/views/usermanages/index.html.erb
+++ b/app/views/usermanages/index.html.erb
@@ -1,19 +1,21 @@
-<p id="notice"><%= notice %></p>
-
-<h1>User Management</h1>
-<div class="topnav">
-  <input type="text" placeholder="Search User">
-</div>
-<i class=fa-solid fa-trash></i>
-<table>
+<div class="container">
+  <h1>User Management</h1>
+    <form class="d-flex" role="search" style="width: 25%">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-light text-right float-end" type="submit">Search</button>
+        </form> <br>
+  
+  <table class="table table-hover table-bordered ">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Email</th>
-      <th colspan="3"></th>
+      <th style="width: 60%">Name</th>
+      <th style="width: auto;">Email</th>
+      <th style="width: auto;">View</th>
+      <th style="width: auto;">Edit</th>
+      <th style="width: auto;">Delete</th>
+
     </tr>
   </thead>
-
   <tbody>
     <% @usermanages.each do |usermanage| %>
       <tr>
@@ -26,7 +28,9 @@
     <% end %>
   </tbody>
 </table>
-
 <br>
 
-<%= link_to ' ', new_usermanage_path, class: "fa-sharp fa-solid fa-user-plus" %>
+<button type="button" class="btn btn-light text-right float-end" >
+  <%= link_to ' ', new_usermanage_path, class: "fa-sharp fa-solid fa-user-plus" %>
+</button>
+</div>
