Added attributes to user table and improved user page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,11 +19,11 @@
       <%= render 'layouts/navbar' %>
     <% end %>
 
-    <div class="container-fluid">
+    <div class="container-xxl">
       <% if notice %>
         <%= render 'layouts/alert' %>
       <% end %>
-
+      <br>
       <%= yield %>
     </div>
 
