--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,44 +1,58 @@
-<h2>Sign up</h2>
+<body style="background-color:#2FB6E1;">
+  <div class="position-absolute top-50 start-50 translate-middle card card" style=" width: 55%; height: auto;  background: #56C6EA; margin: 0 auto;">
+    <div class="card-body">
+      <img class=" rounded mx-auto d-block" src="<%= asset_path( 'logo.png' ) %>" alt="Card image cap" width="auto" height="100px">
+      <br/>
+      <h2 align="center">Sign up</h2>
+      <br/>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name, autofocus: true %>
+        <div class="field form-group" style="margin:auto; width: 90%">
+          <%= f.text_field :first_name, class:"form-control", placeholder:"First name", autofocus: true %>
+        </div>
+
+        <br>
+
+        <div class="field form-group" style="margin:auto; width: 90%">
+          <%= f.text_field :last_name, class:"form-control", placeholder:"Last name" %>
+        </div>
+
+        <br>
+
+        <div class="field form-group" style="margin:auto; width: 90%">
+          <%= f.text_field :username, class:"form-control", placeholder:"Username" %>
+        </div>
+
+        <br>
+
+        <div class="field form-group" style="margin:auto; width: 90%">
+          <%= f.email_field :email, class:"form-control", placeholder:"Email", autocomplete: "email" %>
+        </div>
+
+        <br>
+
+        <div class="field form-group" style="margin:auto; width: 90%">
+          <%= f.password_field :password, class:"form-control", placeholder:"Password (minimum of 6 characters)", autocomplete: "new-password" %>
+        </div>
+
+        <br>
+
+        <div class="field form-group" style="margin:auto; width: 90%">
+          <%= f.password_field :password_confirmation, class:"form-control", placeholder:"Confirm Password", autocomplete: "new-password" %>
+        </div>
+
+        <br>
+
+        <div class="actions text-center" style="width: auto; height: auto;">
+          <%= f.submit "Sign Up", class:'btn btn-light .btn-block' %>
+        </div>
+      <% end %>
+
+      <br>
+
+      <%= render "devise/shared/links" %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name %>
-  </div>
-
-  <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username %>
-  </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</body>
