--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
       <%= render 'layouts/navbar' %>
     <% end %>
 
-    <div class="container-xxl">
+    <div class="container-fluid">
       <% if notice %>
         <%= render 'layouts/alert' %>
       <% end %>
