--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -11,12 +11,12 @@
 
     <div class="field form-group">
       <%= f.label :last_name %><br />
-      <%= f.text_field :last_name, class:"form-control", autocomplete: "email" %>
+      <%= f.text_field :last_name, class:"form-control col-sm-10", autocomplete: "email" %>
     </div>
 
     <div class="field form-group">
       <%= f.label :username %><br />
-      <%= f.text_field :username, class:"form-control", autocomplete: "email" %>
+      <%= f.text_field :username, class:"form-control col-sm-10", autocomplete: "email" %>
     </div>
 
     <div class="field form-group">
@@ -29,11 +29,12 @@
     <% end %>
 
     <div class="field form-group ">
-      <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-      <%= f.password_field :password,  class:"form-control", autocomplete: "new-password" %>
+      <%= f.label :password %> 
       <% if @minimum_password_length %>
-        <em><%= @minimum_password_length %> characters minimum</em>
+        <em><i>(<%= @minimum_password_length %> characters minimum)<i></em>
       <% end %>
+      <%= f.password_field :password,  class:"form-control", autocomplete: "new-password", 
+      placeholder:"(leave blank if you don't want to change it)"%>
     </div>
       <br/>
     <div class="field form-group">
@@ -45,6 +46,7 @@
       <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
       <%= f.password_field :current_password, class:"form-control",  autocomplete: "current-password" %>
     </div>
+      <br/>
 
     <div class="actions">
       <%= f.submit "Update", class:'btn btn-light .btn-block' %>
@@ -55,6 +57,7 @@
 
   <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 -->
+  <br/>
   <button type="button" class="btn btn-light text-right float-end" >
     <%= link_to "Back", :back %>
   </button>
