--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,28 @@
-<h2>Forgot your password?</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+<body style="background-color:#2FB6E1;">
+  <div class="position-absolute top-50 start-50 translate-middle card card container" style=" width: 50%; height: 60%;  background: #56C6EA; margin: 0 auto;">
+    <div class="card-body">
+      <img class=" rounded mx-auto d-block" src="<%= asset_path( 'logo.png' ) %>" alt="Card image cap" width="auto" height="100px">
+        <br><br>
+          <div class="container ">
+          <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+          <%= render "devise/shared/error_messages", resource: resource %>
+          <%=alert%>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+                <p class="text-center">Forgot your password?</p>
+            <div class="field form-group text-center" style="margin:auto; width: 80%; ">
+              
+              <%= f.email_field :email, class:"form-control", placeholder:"Email", autofocus: true, autocomplete: "email" %>
+
+            </div>
+
+            <div class="actions text-center" style="width: auto; height: auto;">
+              <br>
+              <%= f.submit "Send me reset password instructions", class:'btn btn-light .btn-block' %>
+            </div>
+        </div>
+      <% end %> 
+
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</body>
