--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -31,6 +31,10 @@
         <li class="nav-item">
           <%= link_to 'Log Out', destroy_user_session_path, class:"nav-link", method: :delete %>
         </li>
+
+        <li class="nav-item">
+          <%= link_to "User Invite", new_user_invitation_path, class:"nav-link" %>
+        </li>
         
       </ul>
     </div>
