--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -36,10 +36,10 @@
             Current Account
           <% end %>
         </td>
+        <!--<td><%#= link_to 'resend invitation', resend_invitation_user_path(user), method: :patch %></td>
+        <td><%#= link_to 'ban user', ban_user_path(user), method: :patch %></td>-->
       </tr>
     <% end %>
   </tbody>
-  <%= link_to 'resend invitation', resend_invitation_user_path(user), method: :patch %>
-  <%= link_to 'ban user', ban_user_path(user), method: :patch %>
 </table>
 
