--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -36,10 +36,13 @@
             Current Account
           <% end %>
         </td>
-        <!--<td><%#= link_to 'resend invitation', resend_invitation_user_path(user), method: :patch %></td>
+        <!--
+        <td><%#= link_to 'resend invitation', resend_invitation_user_path(user), method: :patch %></td>
         <td><%#= link_to 'ban user', ban_user_path(user), method: :patch %></td>-->
       </tr>
     <% end %>
   </tbody>
 </table>
-
+<button type="button" class="btn btn-light text-right float-end" >
+  <%= link_to "User Invite", new_user_invitation_path, class:"nav-link" %>
+</button>
