--- a/app/views/devise/invitations/new.html.erb
+++ b/app/views/devise/invitations/new.html.erb
@@ -5,12 +5,15 @@
 
   <% resource.class.invite_key_fields.each do |field| -%>
     <div class="field">
-      <%= f.label field %><br />
+      <%= f.label "Email" %><br />
       <%= f.text_field field %>
     </div>
   <% end -%>
 
   <div class="actions">
     <%= f.submit t("devise.invitations.new.submit_button") %>
+  </div>
+  <div>
+  <%= link_to "Back", :back %>
   </div>
 <% end %>
