--- a/app/views/devise/invitations/edit.html.erb
+++ b/app/views/devise/invitations/edit.html.erb
@@ -1,22 +1,53 @@
-<h2><%= t "devise.invitations.edit.header" %></h2>
+<body style="background-color:#2FB6E1;">
+  <div class="position-absolute top-50 start-50 translate-middle card card" style=" width: 55%; height: auto;  background: #56C6EA; margin: 0 auto;">
+    <div class="card-body">
+      <img class=" rounded mx-auto d-block" src="<%= asset_path( 'logo.png' ) %>" alt="Card image cap" width="auto" height="100px">
+      <br/>
+      <h2 align="center"><%= "Set your account settings and password" %></h2>
+      <br/>
+      <h2></h2>
 
-<%= form_for(resource, as: resource_name, url: invitation_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <%= f.hidden_field :invitation_token, readonly: true %>
+      <%= form_for(resource, as: resource_name, url: invitation_path(resource_name), html: { method: :put }) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
+        <%= f.hidden_field :invitation_token, readonly: true %>
 
-  <% if f.object.class.require_password_on_accepting %>
-    <div class="field">
-      <%= f.label :password %><br />
-      <%= f.password_field :password %>
+        <% if f.object.class.require_password_on_accepting %>
+
+        <div class="field form-group" style="margin:auto; width: 90%">
+          <%= f.text_field :first_name, class:"form-control", placeholder:"First name", autofocus: true %>
+        </div>
+
+        <br>
+
+        <div class="field form-group" style="margin:auto; width: 90%">
+          <%= f.text_field :last_name, class:"form-control", placeholder:"Last name" %>
+        </div>
+
+        <br>
+
+        <div class="field form-group" style="margin:auto; width: 90%">
+          <%= f.text_field :username, class:"form-control", placeholder:"Username" %>
+        </div>
+
+        <br>
+
+        <div class="field form-group" style="margin:auto; width: 90%">
+            <%= f.password_field :password, class:"form-control", placeholder:"Password (minimum of 6 characters)", autocomplete: "new-password" %>
+        </div>
+
+        <br>
+
+        <div class="field form-group" style="margin:auto; width: 90%">
+            <%= f.password_field :password_confirmation, class:"form-control", placeholder:"Confirm Password", autocomplete: "new-password" %>
+          </div>
+        <% end %>
+
+        <br>
+
+        <div class="actions text-center" style="width: auto; height: auto;">
+          <%= f.submit "Confirm", class:'btn btn-light .btn-block' %>
+        </div>
+      <% end %>
     </div>
-
-    <div class="field">
-      <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation %>
-    </div>
-  <% end %>
-
-  <div class="actions">
-    <%= f.submit t("devise.invitations.edit.submit_button") %>
   </div>
-<% end %>
+</body>
