Added Audit logs functionality

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,7 +18,7 @@
             Administrative Tools
           </a>
           <ul class="dropdown-menu">
-            <li><%= link_to "System Audit Logs", root_path, class:"dropdown-item" %></li>
+            <li><%= link_to "System Audit Logs", activities_path, class:"dropdown-item" %></li>
             <li><%= link_to "Manage Users", users_path, class:"dropdown-item" %></li>
             <li><%= link_to "Database Backups", root_path, class:"dropdown-item" %></li>
           </ul>
