--- a/app/views/islands/index.html.erb
+++ b/app/views/islands/index.html.erb
@@ -8,10 +8,11 @@
   <table class="table table-hover table-bordered ">
   <thead>
     <tr>
-      <th style="width: 60%">Island Name</th>
+      <th style="width: auto">Island Name</th>
       <th style="width: auto;">Number of Clients</th>
       <th style="width: auto;">Edit</th>
       <th style="width: auto;">Delete</th>
+      <th style="width: auto;">Activity Count</th>
 
     </tr>
   </thead>
@@ -22,6 +23,7 @@
         <td><%= Client.where(:island_id => island).count %></td>
         <td><%= link_to 'Edit', edit_island_path(island) %></td>
         <td><%= link_to 'Delete', island, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><% island.activities.count %>
       </tr>
     <% end %>
   </tbody>
