--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,7 +10,7 @@
     <div class="collapse navbar-collapse " id="navbarNavDropdown">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <%= link_to "Documents", root_path, class:"nav-link" %>
+          <%= link_to "Home", root_path, class:"nav-link" %>
         </li>
         <% if current_user && current_user.admin %>
         <li class="nav-item dropdown">
