--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,63 +2,69 @@
   <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+    
     <%= render "devise/shared/error_messages", resource: resource %>
 
-    <div class="field form-group">
-      <%= f.label :first_name %><br />
-      <%= f.text_field :first_name, class:"form-control", autofocus: true, autocomplete: "email" %>
+    <div class="row" style="flex">
+      <div class="col"> 
+          <div class="field form-group"
+            <%= f.label :first_name %><br />
+            <%= f.text_field :first_name, class:"form-control", autofocus: true, autocomplete: "email" %>
+          </div>
+          <div class="field form-group">
+            <%= f.label :email %><br />
+            <%= f.email_field :email, class:"form-control", autocomplete: "email" %>
+          </div>
+      </div>
+      <div class="col">
+        <div class="field form-group">
+          <%= f.label :last_name %><br />
+          <%= f.text_field :last_name, class:"form-control col-sm-10", autocomplete: "email" %>
+        </div>
+        <div class="field form-group ">
+          <%= f.label :password %> 
+          <% if @minimum_password_length %>
+            <em><i>(<%= @minimum_password_length %> characters minimum)<i></em>
+          <% end %>
+          <%= f.password_field :password,  class:"form-control", autocomplete: "new-password", 
+            placeholder:"(leave blank if you don't want to change it)"%>
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col">
+          <div class="field form-group">
+            <%= f.label :password_confirmation %>
+            <%= f.password_field :password_confirmation, class:"form-control",  autocomplete: "new-password" %>
+          </div>
+        </div>
+        <div class="col">
+          <div class="field">
+            <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+            <%= f.password_field :current_password, class:"form-control",  autocomplete: "current-password" %>
+          </div>
+        </div>        
+      </div>
     </div>
 
-    <div class="field form-group">
-      <%= f.label :last_name %><br />
-      <%= f.text_field :last_name, class:"form-control col-sm-10", autocomplete: "email" %>
+    <div class="actions"> <br>
+      <%= f.submit "Update", class:'btn btn-light .btn-block' %>
+      <button type="button" class="btn btn-light" >
+        <%= link_to "Back", :back %>
+      </button>
     </div>
 
-    <div class="field form-group">
-      <%= f.label :username %><br />
-      <%= f.text_field :username, class:"form-control col-sm-10", autocomplete: "email" %>
-    </div>
 
-    <div class="field form-group">
-      <%= f.label :email %><br />
-      <%= f.email_field :email, class:"form-control", autocomplete: "email" %>
-    </div>
+</div>
+    
+
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
     <% end %>
-
-    <div class="field form-group ">
-      <%= f.label :password %> 
-      <% if @minimum_password_length %>
-        <em><i>(<%= @minimum_password_length %> characters minimum)<i></em>
-      <% end %>
-      <%= f.password_field :password,  class:"form-control", autocomplete: "new-password", 
-      placeholder:"(leave blank if you don't want to change it)"%>
-    </div>
-      <br/>
-    <div class="field form-group">
-      <%= f.label :password_confirmation %>
-      <%= f.password_field :password_confirmation, class:"form-control",  autocomplete: "new-password" %>
-    </div>
-
-    <div class="field">
-      <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-      <%= f.password_field :current_password, class:"form-control",  autocomplete: "current-password" %>
-    </div>
-      <br/>
-
-    <div class="actions">
-      <%= f.submit "Update", class:'btn btn-light .btn-block' %>
-    </div>
   <% end %>
 <!--
   <h3>Cancel my account</h3>
 
   <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 -->
-  <br/>
-  <button type="button" class="btn btn-light text-right float-end" >
-    <%= link_to "Back", :back %>
-  </button>
-</div>
