--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -1,5 +1,8 @@
-<h1>Editing Client</h1>
+<div class="container">
+	<h1>Editing Client</h1>
+	<div>
+		
+		<%= render 'form', client: @client %>
 
-<%= render 'form', client: @client %>
-
-<%= link_to 'Back', island_clients_path %>
+	</div>
+</div>
