--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Client</h1>
+<div class="container">
+	<h1>New Client</h1>
 
-<%= render 'form', client: @client %>
+	Enter client here:
+	<%= render 'form', client: @client %>
 
-<%= link_to 'Back', island_clients_path(@island) %>
+</div>
