--- a/app/views/islands/edit.html.erb
+++ b/app/views/islands/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Island</h1>
-
-<%= render 'form', island: @island %>
-
-<%= link_to 'Show', @island %> |
-<%= link_to 'Back', islands_path %>
+<<form>
+  <div class="container">
+  	<h1>Editing Island</h1>
+  	<%= render 'form', island: @island %>
+  </div>
+</form>
