--- a/app/views/islands/new.html.erb
+++ b/app/views/islands/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New Island</h1>
-
-<%= render 'form', island: @island %>
-
-<%= link_to 'Back', islands_path %>
+<form>
+	<div class="container">
+		<h1>New Island</h1>
+		<%= render 'form', island: @island %>
+	</div>
+</form>
