--- a/app/views/deep_wells/edit.html.erb
+++ b/app/views/deep_wells/edit.html.erb
@@ -1,5 +1,7 @@
-<h1>Editing Deep Well</h1>
+<div class="container">
+	<h1>Edit Deep Well</h1>
 
-<%= render 'form', deep_well: @deep_well %>
+	<%= render 'form', deep_well: @deep_well %>
 
-<%= link_to 'Back', client_deep_wells_path %>
+
+</div>
