--- a/app/views/deep_wells/index.html.erb
+++ b/app/views/deep_wells/index.html.erb
@@ -26,8 +26,13 @@
 </table>
 <br>
 
-<button type="button" class="btn btn-light text-right float-end" >
-  <%= link_to 'New Deep Well', new_client_deep_well_path %>
-  <%= link_to 'Back', islands_path %>
-</button>
+    <div style="float:right">
+      <button type="button" class="btn btn-light" >
+        <%= link_to 'New Deep Well', new_client_deep_well_path %>
+      </button>
+      <button type="button" class="btn btn-light" >
+        <%= link_to 'Back', islands_path %>
+      </button>
+    </div>
+
 </div>
