--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -47,7 +47,7 @@
       </div>
     </div>
 
-    <div class="actions"> <br>
+    <div class="actions" style="float:right"> <br>
       <%= f.submit "Update", class:'btn btn-light .btn-block' %>
       <button type="button" class="btn btn-light" >
         <%= link_to "Back", :back %>
