--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,7 +1,8 @@
+<div class="container">
 <p id="notice"><%= notice %></p>
 
 <h1>Activities</h1>
-
+<br>
 <table class="table table-hover table-bordered ">
   <thead>
     <tr>
@@ -37,3 +38,4 @@
     <% end %>
   </tbody>
 </table>
+</div>
