--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,14 +1,13 @@
 <div class="container">
   <h1>User Management</h1>
-  <form class="d-flex" role="search" style="width: 25%">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-light text-right float-end" type="submit">Search</button>
-        </form> <br>
 
+  <!-- Partial for Search Form-->
+  <%= render 'users/search_form.html.erb'%>
+<br>
 <table class="table table-hover table-bordered ">
   <thead>
     <tr>
-      <th width="Auto">Name</th>
+      <th width="Auto"><%= sort_link(@q, :first_name, "Name", default_order: :asc)%></th>  <!-- Sorts through the names in alphabetical order-->
       <th width="Auto">Email</th>
       <th width="Auto">Role</th>
       <th width="10%">Delete</th>
