--- a/app/views/deep_wells/index.html.erb
+++ b/app/views/deep_wells/index.html.erb
@@ -31,7 +31,7 @@
         <%= link_to 'New Deep Well', new_client_deep_well_path %>
       </button>
       <button type="button" class="btn btn-light" >
-        <%= link_to 'Back', islands_path %>
+        <%= link_to 'Back', clients_path %>
       </button>
     </div>
 
