--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,16 +13,15 @@
           <%= link_to "Home", root_path, class:"nav-link" %>
         </li>
         <% if current_user && current_user.admin %>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Administrative Tools
-          </a>
-          <ul class="dropdown-menu">
-            <li><%= link_to "System Audit Logs", activities_path, class:"dropdown-item" %></li>
-            <li><%= link_to "Manage Users", users_path, class:"dropdown-item" %></li>
-            <li><%= link_to "Database Backups", root_path, class:"dropdown-item" %></li>
-          </ul>
-        </li>
+          <li class="nav-item">
+            <%= link_to "System Audit Logs", activities_path, class:"nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Manage Users", users_path, class:"nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Database Backups", root_path, class:"nav-link" %>
+          </li>
         <% end %>
         <li class="nav-item">
           <%= link_to "Settings", edit_user_registration_path, class:"nav-link" %>
